--- a/Breekly-FE/src/app/manage-subscriptions-dialog/manage-subscriptions-dialog.component.html
+++ b/Breekly-FE/src/app/manage-subscriptions-dialog/manage-subscriptions-dialog.component.html
@@ -16,4 +16,4 @@
       </tr>
     </tbody>
   </table>
-  <button class="btn" mat-button mat-dialog-close>Cancel</button>
+  <button class="btn" mat-button mat-dialog-close>Renunta</button>
