--- a/Breekly-FE/src/app/navbar/navbar.component.html
+++ b/Breekly-FE/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink] = "['']">Home</a>
+            <a class="nav-link active" aria-current="page" [routerLink] = "['']">Acasă</a>
           </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -21,10 +21,10 @@
             </ul>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" [routerLink] = "['account']">Account</a>
+            <a class="nav-link" [routerLink] = "['account']">Cont</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink] = "['cart']">Cart</a>
+            <a class="nav-link" [routerLink] = "['cart']">Coș</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" [routerLink] = "['product', '6086b827a6b71f406526d7d5']">Best Product</a>
